add GoogleMap component

--- a/src/index.html
+++ b/src/index.html
@@ -7,5 +7,7 @@
   </head>
   <body>
     <div id="root"></div>
+
+    <script src="https://maps.googleapis.com/maps/api/js?key=AIzaSyCwd5XLXFZ9gcY_dKif9khiRSrTloTrJ9k"></script>
   </body>
 </html>
